<resources>
    <string name="app_name" translatable="false">Moto Navigator</string>
    <string name="PUBLIC_TOKEN" translatable="false">pk.eyJ1Ijoib3B0aWNvZCIsImEiOiJjaXF1bHplMnQwMDVvMDRqNmc3bnJ4ZXNyIn0.sYS6SFog947nQwX649-EgQ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="about_text">\nLicensed under the Apache License v2.\n \t \t \t Source available on <a href="https://github.com/opticod/moto-navigator">GitHub</a>.\n</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="loading">Loading…</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="choose_destination">Choose Destination</string>
    <string name="logo_widget">Logo Widget</string>
    <string name="drives">Drives</string>
    <string name="empty_list">No drives available!</string>
    <string name="bullet" translatable="false">"•"</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_msg">Are you sure you want to delete this item?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="about">About</string>
    <string name="drive">Drive</string>
    <string name="network_unavailable">Network Unavailable! Please try later!</string>
    <string name="network_info">Network Unavailable! Some feature may not work properly!</string>
    <string name="choose_dest">Choose Destination…</string>
    <string name="set_origin">Set Origin!</string>
    <string name="set_dest">Set Destination!</string>
    <string name="route_is">"Route is "</string>
    <string name="long_str">long</string>
    <string name="moto_navigator" translatable="false">Moto Navigator</string>
    <string name="by">by</string>
    <string name="anupam_das" translatable="false">ANUPAM DAS</string>
    <string name="opticod" translatable="false">(opticod)</string>
    <string name="or">OR</string>
    <string name="guest_login">GUEST LOGIN</string>
    <string name="no_drives_available">No Drives Available!</string>
    <string name="enter_starting_point">Enter Starting Point</string>
    <string name="walk">Walk</string>
    <string name="cycle">Cycle</string>
    <string name="delete_all">Delete All</string>
    <string name="app_logo">App Logo</string>
    <string name="get_present_location">Get present location</string>
    <string name="swap">Swap</string>
    <string name="mode">Mode</string>
    <string name="mode_car">Mode car</string>
    <string name="mode_bike">Mode Bike</string>
    <string name="mode_walk">Mode Walk</string>
    <string name="onAuthStateChanges_signed_in">onAuthStateChanged:signed_in:</string>
    <string name="onAuthStateChanges_sign_out">onAuthStateChanged:signed_out</string>
    <string name="signInAnonym_complete">signInAnonymously:onComplete:</string>
    <string name="signInAnonym">signInAnonymously</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="login_mode" translatable="false">LOGIN_MODE</string>
    <string name="firebase_google">firebaseAuthWithGoogle:</string>
    <string name="signInWithCredential_complete">signInWithCredential:onComplete:</string>
    <string name="signInWithCredential">signInWithCredential</string>
    <string name="connection_failed">onConnectionFailed:</string>
    <string name="google_play_error">Google Play Services error.</string>
    <string name="required">Required.</string>
    <string name="createAccount">createAccount:</string>
    <string name="createUserWithEmail_complete">createUserWithEmail:onComplete:</string>
    <string name="signEmail_failed">signInWithEmail:failed</string>
    <string name="signEmail_complete">signInWithEmail:onComplete:</string>
    <string name="route_id" translatable="false">route_id</string>
    <string name="back">back</string>
    <string name="cycling" translatable="false">cycling</string>
    <string name="driving" translatable="false">driving</string>
    <string name="dir_collection_list" translatable="false">dirCollectionList</string>
    <string name="dir_list" translatable="false">dirList</string>
    <string name="directions">Directions</string>
    <string name="destination">Destination</string>
    <string name="origin">Origin</string>
    <string name="map_data" translatable="false">mapData</string>
    <string name="origin_empty">Origin empty</string>
    <string name="destination_empty">Destination empty</string>
    <string name="response_code">"Response code: "</string>
    <string name="route_error">No routes found, make sure you set the right user and access token.</string>
    <string name="error">"Error: "</string>
    <string name="start_name" translatable="false">start_name</string>
    <string name="end_name" translatable="false">end_name</string>
    <string name="walking" translatable="false">walking</string>
    <string name="welcome">Welcome</string>
    <string name="km">" km"</string>
    <string name="m">" m"</string>
    <string name="min">min</string>
    <string name="sec">" sec"</string>
    <string name="km_long">km long.</string>
    <string name="m_long">m long.</string>
    <string name="map">Map</string>
    <string name="sign_out">Sign Out</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="toogle_location_service">Toogle Location Service</string>

</resources>
