<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_36dp"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_directions"
            android:icon="@drawable/ic_navigation_black_36dp"
            android:title="@string/drive" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_black_36dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_account_circle_black_36dp"
            android:title="@string/sign_out" />
    </group>

</menu>
