<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">


    <LinearLayout
        android:id="@+id/widget"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_menu_item_height"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="@dimen/widget_logo_icon"
            android:layout_height="@dimen/widget_logo_icon"
            android:layout_gravity="center"
            android:layout_weight="0.20"
            android:contentDescription="@string/logo_widget"
            android:src="@drawable/ic_drive_eta_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.80"
            android:paddingLeft="@dimen/paddingMed"
            android:paddingStart="@dimen/paddingMed"
            android:text="@string/drives"
            android:textColor="@color/cardview_dark_background"
            android:textSize="24sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white">

        <ListView
            android:id="@+id/widget_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:divider="@null"
            android:dividerHeight="0dp"
            tools:listitem="@layout/widget_list_item" />

        <TextView
            android:id="@+id/widget_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/empty_list"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/secondary_text" />
    </FrameLayout>

</LinearLayout>