<?xml version="1.0" encoding="utf-8"?><!--

    Copyright (C) 2017 Anupam Das

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

    -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_list_item"
    android:layout_width="match_parent"
    android:layout_height="@dimen/widget_list_item_height"
    android:background="@drawable/touch_selector_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/paddingSmall"
        android:paddingLeft="@dimen/paddingSmall"
        android:paddingStart="@dimen/paddingSmall"
        android:paddingTop="@dimen/paddingSmall"
        android:weightSum="10">


        <ImageView
            android:id="@+id/modeCar"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/mode_car"
            android:gravity="center"
            android:src="@drawable/ic_directions_car_black_24dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/modeBike"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/mode_bike"
            android:gravity="center"
            android:src="@drawable/ic_directions_bike_black_24dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/modeWalk"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/mode_walk"
            android:gravity="center"
            android:src="@drawable/ic_directions_walk_black_24dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/start_name"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="center"
            android:paddingEnd="@dimen/paddingSmall"
            android:paddingStart="@dimen/paddingSmall"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/secondary_text" />

        <ImageView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/ic_trending_flat_black_24dp" />

        <TextView
            android:id="@+id/dest_name"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="center"
            android:paddingEnd="@dimen/paddingSmall"
            android:paddingStart="@dimen/paddingSmall"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/secondary_text" />

    </LinearLayout>
</FrameLayout>