<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-24dp"
        android:clipToPadding="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            mapbox:center_latitude="23.242598"
            mapbox:center_longitude="87.880908"
            mapbox:style_url="mapbox://styles/mapbox/streets-v9"
            mapbox:zoom="14" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/drive_toggle_fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/location_toggle_fab1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_directions_white_24dp"
            mapbox:backgroundTint="#E55E5E" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/drive_toggle_fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/location_toggle_fab2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="16dp"
            android:src="@drawable/ic_directions_white_24dp"
            mapbox:backgroundTint="#E55E5E" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/location_toggle_fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="130dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_my_location_24dp"
            mapbox:backgroundTint="#E55E5E" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/location_toggle_fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="16dp"
            android:src="@drawable/ic_my_location_24dp"
            mapbox:backgroundTint="#E55E5E" />
    </RelativeLayout>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:scaleType="centerCrop"
                android:weightSum="5"
                app:layout_collapseMode="parallax">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:paddingTop="6dp"
                    android:weightSum="10">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="28dp"
                        android:layout_weight="6"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <com.mapbox.services.android.geocoder.ui.GeocoderAutoCompleteView
                            android:id="@+id/query_start"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:hint="@string/enter_starting_point"
                            android:maxLines="1" />

                        <com.mapbox.services.android.geocoder.ui.GeocoderAutoCompleteView
                            android:id="@+id/query_destination"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:hint="@string/choose_destination"
                            android:maxLines="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <ImageButton
                            android:id="@+id/get_current_location"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:src="@drawable/ic_my_location_white_24dp" />

                        <ImageButton
                            android:id="@+id/swap_endpoints"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:src="@drawable/ic_swap_vert_white_24dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:weightSum="3">

                    <Button
                        android:id="@+id/walk"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/walk" />

                    <Button
                        android:id="@+id/cycle"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cycle" />

                    <Button
                        android:id="@+id/drive"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/drive" />

                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="false"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>